@@ -1,0 +1,10 @@
+@(1, 2, 3, 4, 5, 6, 7, 8, 9, 0)
+4321
+Function 1 called!
+Function 2 called!
+IF test 1
+Function 1 called!
+Function 2 called!
+Test: @(4, 3, 2, 1)
+Function 2 called!
+Function 1 called!
